--- a/package.json
+++ b/package.json
@@ -34,20 +34,20 @@
     "date-fns": "^2.28.0",
     "expiry-map": "^2.0.0",
     "fathom-client": "^3.4.1",
-    "got": "^12.0.3",
+    "got": "12.1.0",
     "isomorphic-unfetch": "^3.1.0",
     "lqip-modern": "^1.2.0",
     "next": "^12.3.1",
-    "notion-client": "^6.15.6",
-    "notion-types": "^6.15.6",
-    "notion-utils": "^6.15.6",
+    "notion-client": "6.15.6",
+    "notion-types": "6.15.6",
+    "notion-utils": "6.15.6",
     "p-map": "^5.3.0",
     "p-memoize": "^6.0.1",
     "posthog-js": "^1.20.2",
     "react": "^18.2.0",
     "react-body-classname": "^1.3.1",
     "react-dom": "^18.2.0",
-    "react-notion-x": "^6.15.6",
+    "react-notion-x": "6.15.6",
     "react-tweet-embed": "^2.0.0",
     "react-use": "^17.3.2",
     "rss": "^1.2.2"
