--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -1,64 +1,64 @@
-name: Build Image And Deploy
-on:
-  schedule:
-    - cron: '0 0 * * 0'
-  workflow_dispatch:
-jobs:
-  context:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Get current date
-        id: date
-        run: |
-          echo "today=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ secrets.REGISTRY }}
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          platforms: linux/amd64
-          push: true
-          tags: |
-            ${{ secrets.REGISTRY }}/${{ secrets.DOCKER_USERNAME }}/next-notion:${{ steps.date.outputs.today }}
-      - name: copy script to ssh
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          port: ${{ secrets.PORT }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.KEY }}
-          source: "./docker-compose.yml,./next-notion-script.sh"
-          target: "${{secrets.NEXT_NOTION_DIR}}"
-
-      - name: Next-Notion
-        uses: appleboy/ssh-action@v0.1.9
-        with:
-          host: ${{ secrets.HOST }}
-          port: ${{ secrets.PORT }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{secrets.KEY}}
-          script: |
-            chmod +x ${{secrets.NEXT_NOTION_DIR}}/next-notion-script.sh 
-            ${{secrets.NEXT_NOTION_DIR}}/next-notion-script.sh ${{secrets.NEXT_NOTION_DIR}} ${{secrets
-            .DOCKER_USERNAME}} ${{steps.date.outputs.today}}
-            rm ${{secrets.NEXT_NOTION_DIR}}/next-notion-script.sh && echo "clean ${{secrets.NEXT_NOTION_DIR}}/next-notion-script.sh"
-
-
-
+#name: Build Image And Deploy
+#on:
+#  schedule:
+#    - cron: '0 0 * * 0'
+#  workflow_dispatch:
+#jobs:
+#  context:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v3
+#
+#      - name: Set up QEMU
+#        uses: docker/setup-qemu-action@v2
+#
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v2
+#
+#      - name: Get current date
+#        id: date
+#        run: |
+#          echo "today=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+#
+#      - name: Login to Docker Hub
+#        uses: docker/login-action@v2
+#        with:
+#          registry: ${{ secrets.REGISTRY }}
+#          username: ${{ secrets.DOCKER_USERNAME }}
+#          password: ${{ secrets.DOCKER_PASSWORD }}
+#
+#
+#      - name: Build and push
+#        uses: docker/build-push-action@v4
+#        with:
+#          context: .
+#          platforms: linux/amd64
+#          push: true
+#          tags: |
+#            ${{ secrets.REGISTRY }}/${{ secrets.DOCKER_USERNAME }}/next-notion:${{ steps.date.outputs.today }}
+#      - name: copy script to ssh
+#        uses: appleboy/scp-action@master
+#        with:
+#          host: ${{ secrets.HOST }}
+#          port: ${{ secrets.PORT }}
+#          username: ${{ secrets.USERNAME }}
+#          key: ${{ secrets.KEY }}
+#          source: "./docker-compose.yml,./next-notion-script.sh"
+#          target: "${{secrets.NEXT_NOTION_DIR}}"
+#
+#      - name: Next-Notion
+#        uses: appleboy/ssh-action@v0.1.9
+#        with:
+#          host: ${{ secrets.HOST }}
+#          port: ${{ secrets.PORT }}
+#          username: ${{ secrets.USERNAME }}
+#          key: ${{secrets.KEY}}
+#          script: |
+#            chmod +x ${{secrets.NEXT_NOTION_DIR}}/next-notion-script.sh
+#            ${{secrets.NEXT_NOTION_DIR}}/next-notion-script.sh ${{secrets.NEXT_NOTION_DIR}} ${{secrets
+#            .DOCKER_USERNAME}} ${{steps.date.outputs.today}}
+#            rm ${{secrets.NEXT_NOTION_DIR}}/next-notion-script.sh && echo "clean ${{secrets.NEXT_NOTION_DIR}}/next-notion-script.sh"
+#
+#
+#
